sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:20: error: not found: value getValeursNombre
  while (i <= getValeursNombre()-N-1) {
              ^AlgSelectionSort:20: error: type mismatch;
 found   : Unit
 required: Int
  while (i <= getValeursNombre()-N-1) {
  ^